tests/ui/intrinsics/issue-28575.mir.stderr
error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/issue-28575.rs:12:5
   |
LL |     FOO()
   |     ^^^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

warning: `extern` block uses type `extern "rust-intrinsic" fn()`, which is not FFI-safe
  --> $DIR/issue-28575.rs:7:21
   |
LL |     pub static FOO: extern "rust-intrinsic" fn();
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider using an `extern fn(...) -> ...` function pointer instead
   = note: this function pointer has Rust-specific calling convention
   = note: `#[warn(improper_ctypes)]` on by default

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0133`.
